--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,8 @@ header {
 }
 
 .container {
-
+    width: 90%;
+    margin: 0 auto;
 }
 
 .branding {
@@ -62,7 +63,9 @@ nav {
 /* Home Page Rulesets */
 
 #introduction {
-
+    text-align: center;
+    margin-top: 15%;
+    margin-bottom: 50%;
 }
 
 #introduction h1 {
@@ -99,7 +102,10 @@ nav {
 .instrument {
     width: 90%;
     overflow: auto;
-
+    background-color: rgba(255,255,255,0.9);
+    margin: 5% auto;
+    padding: 2% 5%;
+    border-radius: 5px;
 }
 
 .image {
@@ -162,13 +168,13 @@ nav {
 }
 
 #top h2 {
-    margin: 3%
+    margin: 3%;
     font-size: 30px;
     font-weight: normal;
 }
 
 #top p {
-    margin: 3%
+    margin: 3%;
     font-size: 18px;
     font-weight: lighter;
 }
